adds notebook changes from optimization

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -112,7 +112,7 @@
     "%%time\n",
     "%matplotlib inline\n",
     "d = datasets.Odoherty21Dataset()\n",
-    "d = TestDataset()\n",
+    "# d = TestDataset()\n",
     "\n",
     "streams = []\n",
     "streams.append( (d.neural_data,     0) )\n",
@@ -130,12 +130,12 @@
     "\n",
     "p2 = Pipeline([\n",
     "    bw:=Bubblewrap(\n",
-    "        num=1000, # 1000\n",
+    "        num=1000,\n",
     "        M=500,\n",
     "        lam=1e-3,\n",
     "        nu=1e-3,\n",
     "        eps=1e-4,\n",
-    "        step=8e-2, # 1e-3\n",
+    "        step=1,\n",
     "        num_grad_q=1,\n",
     "        sigma_orig_adjustment=100, # 0\n",
     "        input_streams={2:'X'},\n",
@@ -233,8 +233,21 @@
     "prediction_ts = np.squeeze(prediction_ts)\n",
     "\n",
     "plt.close()\n",
-    "plt.close()\n",
-    "\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-27T22:41:02.321827Z",
+     "start_time": "2024-09-27T22:37:52.959696Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "Bubblewrap.compare_runs([bw], t_in_samples=True)\n",
     "plt.show()\n",
     "\n",
@@ -255,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:41:36.816596Z",
@@ -286,14 +299,13 @@
     "plt.axvline(prediction_ts[test_s].min(), color='k')\n",
     "plt.xlabel(\"time (samples)\")\n",
     "plt.ylabel(\"behavior\")\n",
-    "plt.xlim([120, 121])\n",
     "plt.legend()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:41:02.582258Z",
@@ -327,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:52:10.336231Z",
@@ -348,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:44:12.370596Z",
@@ -363,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:41:02.672199Z",
@@ -378,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:51:23.876885Z",
@@ -403,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:41:02.716498Z",
@@ -418,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:41:02.867290Z",
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -454,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-27T22:41:02.868007Z",
