adds behavior to standard bw comparison plots
also integrates some optimized hyperparameters

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:37:52.612373Z",
-     "start_time": "2024-09-27T22:37:51.140168Z"
+     "end_time": "2024-09-28T18:41:21.201296Z",
+     "start_time": "2024-09-28T18:41:19.489217Z"
     }
    },
    "outputs": [],
@@ -20,7 +20,8 @@
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
-    "from IPython.display import Video, Image, display\n"
+    "from IPython.display import Video, Image, display\n",
+    "\n"
    ]
   },
   {
@@ -29,8 +30,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:37:52.939884Z",
-     "start_time": "2024-09-27T22:37:52.613632Z"
+     "end_time": "2024-09-28T18:41:21.434273Z",
+     "start_time": "2024-09-28T18:41:21.202079Z"
     }
    },
    "outputs": [],
@@ -53,8 +54,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:37:52.955612Z",
-     "start_time": "2024-09-27T22:37:52.942832Z"
+     "end_time": "2024-09-28T18:41:21.451397Z",
+     "start_time": "2024-09-28T18:41:21.437571Z"
     }
    },
    "outputs": [],
@@ -103,8 +104,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.321827Z",
-     "start_time": "2024-09-27T22:37:52.959696Z"
+     "end_time": "2024-09-28T18:45:59.901912Z",
+     "start_time": "2024-09-28T18:41:21.455516Z"
     }
    },
    "outputs": [],
@@ -122,7 +123,7 @@
     "p1 = Pipeline([\n",
     "    CenteringTransformer(init_size=50, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    # CenteringTransformer(init_size=0, input_streams={1:'X'}, output_streams={1:1}),\n",
-    "    KernelSmoother(tau=0.08/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    KernelSmoother(tau=0.04/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
     "    pro:=proSVD(k=6, init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
     "    jpca:=sjPCA(init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
@@ -130,7 +131,7 @@
     "\n",
     "p2 = Pipeline([\n",
     "    bw:=Bubblewrap(\n",
-    "        num=1000,\n",
+    "        num=1100,\n",
     "        M=500,\n",
     "        lam=1e-3,\n",
     "        nu=1e-3,\n",
@@ -242,13 +243,21 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.321827Z",
-     "start_time": "2024-09-27T22:37:52.959696Z"
+     "end_time": "2024-09-28T18:46:00.255088Z",
+     "start_time": "2024-09-28T18:45:59.902788Z"
     }
    },
    "outputs": [],
    "source": [
-    "Bubblewrap.compare_runs([bw], t_in_samples=True)\n",
+    "\n",
+    "behavior_dict = dict(\n",
+    "    true_behavior=np.squeeze(d.behavioral_data.a),\n",
+    "    true_behavior_t=d.behavioral_data.t,\n",
+    "    predicted_behavior=beh_predictions,\n",
+    "    predicted_behavior_t=prediction_ts,\n",
+    ")\n",
+    "\n",
+    "adaptive_latents.bubblewrap.Bubblewrap.compare_runs([bw], [behavior_dict], t_in_samples=True)\n",
     "plt.show()\n",
     "\n",
     "if pred_am is not None:\n",
@@ -261,7 +270,7 @@
     "    display(display_class(bw_am.outfile, embed=True, width=700))\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.matshow(bw.log['alpha'][-30:])\n",
+    "ax.matshow(bw.log['alpha'][-300:])\n",
     "ax.set_title('alpha')"
    ]
   },
@@ -269,47 +278,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estimates = adaptive_latents.utils.resample_matched_timeseries(d.behavioral_data.a[:,0,:],d.behavioral_data.t,  prediction_ts)\n",
-    "targets = beh_predictions\n",
-    "\n",
-    "errors = estimates - targets\n",
-    "test_s = prediction_ts > (prediction_ts[0] + prediction_ts[-1] )/2\n",
-    "\n",
-    "print([np.corrcoef(estimates[test_s,i], targets[test_s,i])[0,1] for i in range(3)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:36.816596Z",
-     "start_time": "2024-09-27T22:41:36.735509Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(3):\n",
-    "    plt.plot(prediction_ts, estimates[:,i], color=f'C{i}')\n",
-    "    plt.plot(prediction_ts, targets[:,i], color=f'C{i}', alpha=.5, label=f'{np.corrcoef(estimates[test_s,i], targets[test_s,i])[0,1]:.3f}')\n",
-    "plt.axvline(prediction_ts[test_s].min(), color='k')\n",
-    "plt.xlabel(\"time (samples)\")\n",
-    "plt.ylabel(\"behavior\")\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.582258Z",
-     "start_time": "2024-09-27T22:41:02.510078Z"
+     "end_time": "2024-09-28T18:46:00.676030Z",
+     "start_time": "2024-09-28T18:46:00.557447Z"
     }
    },
    "outputs": [],
@@ -339,11 +311,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:52:10.336231Z",
-     "start_time": "2024-09-27T22:52:10.290673Z"
+     "end_time": "2024-09-28T18:46:35.512512Z",
+     "start_time": "2024-09-28T18:46:35.454952Z"
     }
    },
    "outputs": [],
@@ -352,19 +324,19 @@
     "e1[0] = 1\n",
     "e2[1] = 1\n",
     "\n",
-    "plt.plot(jpca.inverse_transform(pro.inverse_transform(e1, 2), 2))\n",
-    "plt.plot(jpca.inverse_transform(pro.inverse_transform(e2, 2), 2))\n",
+    "plt.plot(pro.inverse_transform(jpca.inverse_transform(e1, 2), 2))\n",
+    "plt.plot(pro.inverse_transform(jpca.inverse_transform(e2, 2), 2))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:44:12.370596Z",
-     "start_time": "2024-09-27T22:44:12.358668Z"
+     "end_time": "2024-09-28T18:46:00.838731Z",
+     "start_time": "2024-09-28T18:46:00.830843Z"
     }
    },
    "outputs": [],
@@ -375,11 +347,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.672199Z",
-     "start_time": "2024-09-27T22:41:02.618947Z"
+     "end_time": "2024-09-28T18:46:01.096545Z",
+     "start_time": "2024-09-28T18:46:00.840328Z"
     }
    },
    "outputs": [],
@@ -390,11 +362,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:51:23.876885Z",
-     "start_time": "2024-09-27T22:51:23.812434Z"
+     "end_time": "2024-09-28T18:46:01.166197Z",
+     "start_time": "2024-09-28T18:46:01.097797Z"
     }
    },
    "outputs": [],
@@ -415,26 +387,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "11",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.716498Z",
-     "start_time": "2024-09-27T22:41:02.707208Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pro.Q[:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.867290Z",
-     "start_time": "2024-09-27T22:41:02.717070Z"
+     "end_time": "2024-09-28T18:46:01.649550Z",
+     "start_time": "2024-09-28T18:46:01.169547Z"
     }
    },
    "outputs": [],
@@ -457,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -466,13 +423,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-27T22:41:02.868007Z",
-     "start_time": "2024-09-27T22:41:02.867944Z"
-    }
-   },
+   "id": "13",
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
