adds behavior lag to Odoherty21

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T18:41:21.201296Z",
-     "start_time": "2024-09-28T18:41:19.489217Z"
+     "end_time": "2024-09-28T19:21:29.292838Z",
+     "start_time": "2024-09-28T19:21:29.290010Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
     "from IPython.display import Video, Image, display\n",
-    "\n"
+    "from importlib import reload\n"
    ]
   },
   {
@@ -30,13 +30,13 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T18:41:21.434273Z",
-     "start_time": "2024-09-28T18:41:21.202079Z"
+     "end_time": "2024-09-28T19:12:14.142182Z",
+     "start_time": "2024-09-28T19:12:13.820340Z"
     }
    },
    "outputs": [],
    "source": [
-    "!hostname"
+    "!echo $(hostname) $(git rev-parse --short HEAD)"
    ]
   },
   {
@@ -54,65 +54,15 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T18:41:21.451397Z",
-     "start_time": "2024-09-28T18:41:21.437571Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class TestDataset(datasets.Dataset):\n",
-    "    doi = None\n",
-    "    automatically_downloadable = False\n",
-    "    model_organism = None\n",
-    "    \n",
-    "    def __init__(self, Fs=33, total_time=600):\n",
-    "        self.rng = np.random.default_rng()\n",
-    "        self.Fs = Fs\n",
-    "        self.bin_width = 1/self.Fs\n",
-    "        self.t = np.linspace(0, total_time, total_time*self.Fs + 1)\n",
-    "        \n",
-    "        neural_data, behavioral_data = self.construct()\n",
-    "        \n",
-    "        self.neural_data = NumpyTimedDataSource(neural_data, self.t)\n",
-    "        self.behavioral_data = NumpyTimedDataSource(behavioral_data, self.t)\n",
-    "\n",
-    "    def acquire(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def construct(self):\n",
-    "        self.acquire()\n",
-    "        # 15 samples is about 2pi end_time\n",
-    "        # 1 sample is bin_width start_time\n",
-    "        speed_factor = self.Fs * np.pi*2 / 15\n",
-    "        neural_data = np.sin(np.vstack(3*[self.t ]).T * speed_factor)\n",
-    "        neural_data = neural_data + self.rng.normal(scale=.1,size=neural_data.shape)\n",
-    "\n",
-    "        behavioral_data = np.sin(np.vstack(3*[self.t]).T * speed_factor)\n",
-    "        behavioral_data = behavioral_data + self.rng.normal(scale=.1,size=behavioral_data.shape)\n",
-    "        return neural_data, behavioral_data\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:45:59.901912Z",
-     "start_time": "2024-09-28T18:41:21.455516Z"
+     "end_time": "2024-09-28T19:16:38.976040Z",
+     "start_time": "2024-09-28T19:12:15.207717Z"
     }
    },
    "outputs": [],
    "source": [
     "%%time\n",
     "%matplotlib inline\n",
-    "d = datasets.Odoherty21Dataset()\n",
+    "d = datasets.Odoherty21Dataset(behavior_lag=0, add_velocity=True)\n",
     "# d = TestDataset()\n",
     "\n",
     "streams = []\n",
@@ -240,11 +190,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:00.255088Z",
-     "start_time": "2024-09-28T18:45:59.902788Z"
+     "end_time": "2024-09-28T19:21:31.525676Z",
+     "start_time": "2024-09-28T19:21:31.078176Z"
     }
    },
    "outputs": [],
@@ -256,7 +206,6 @@
     "    predicted_behavior=beh_predictions,\n",
     "    predicted_behavior_t=prediction_ts,\n",
     ")\n",
-    "\n",
     "adaptive_latents.bubblewrap.Bubblewrap.compare_runs([bw], [behavior_dict], t_in_samples=True)\n",
     "plt.show()\n",
     "\n",
@@ -277,13 +226,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:00.676030Z",
-     "start_time": "2024-09-28T18:46:00.557447Z"
-    }
-   },
+   "id": "5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -311,13 +255,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:35.512512Z",
-     "start_time": "2024-09-28T18:46:35.454952Z"
-    }
-   },
+   "id": "6",
+   "metadata": {},
    "outputs": [],
    "source": [
     "e1, e2 = np.zeros(6), np.zeros(6)\n",
@@ -332,13 +271,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:00.838731Z",
-     "start_time": "2024-09-28T18:46:00.830843Z"
-    }
-   },
+   "id": "7",
+   "metadata": {},
    "outputs": [],
    "source": [
     "jpca.get_U()"
@@ -347,13 +281,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:01.096545Z",
-     "start_time": "2024-09-28T18:46:00.840328Z"
-    }
-   },
+   "id": "8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.matshow(bw.A)"
@@ -362,13 +291,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:01.166197Z",
-     "start_time": "2024-09-28T18:46:01.097797Z"
-    }
-   },
+   "id": "9",
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -387,13 +311,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T18:46:01.649550Z",
-     "start_time": "2024-09-28T18:46:01.169547Z"
-    }
-   },
+   "id": "10",
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert isinstance(d, datasets.Zong22Dataset)\n",
@@ -414,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -423,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
