changes behavior lag to neural lag

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "%%time\n",
     "%matplotlib inline\n",
-    "d = datasets.Odoherty21Dataset(behavior_lag=0, add_velocity=True)\n",
+    "d = datasets.Odoherty21Dataset(neural_lag=0, add_velocity=False)\n",
     "# d = TestDataset()\n",
     "\n",
     "streams = []\n",
