uses the saved velocity in Odoherty21

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T19:21:29.292838Z",
-     "start_time": "2024-09-28T19:21:29.290010Z"
+     "end_time": "2024-09-28T21:00:55.075656Z",
+     "start_time": "2024-09-28T21:00:55.072313Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T19:12:14.142182Z",
-     "start_time": "2024-09-28T19:12:13.820340Z"
+     "end_time": "2024-09-28T21:00:55.641040Z",
+     "start_time": "2024-09-28T21:00:55.289282Z"
     }
    },
    "outputs": [],
@@ -54,21 +54,23 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T19:16:38.976040Z",
-     "start_time": "2024-09-28T19:12:15.207717Z"
+     "start_time": "2024-09-28T21:00:55.645387Z"
+    },
+    "jupyter": {
+     "is_executing": true
     }
    },
    "outputs": [],
    "source": [
     "%%time\n",
     "%matplotlib inline\n",
-    "d = datasets.Odoherty21Dataset(neural_lag=0, add_velocity=False)\n",
+    "d = datasets.Odoherty21Dataset(neural_lag=0)\n",
     "# d = TestDataset()\n",
     "\n",
     "streams = []\n",
     "streams.append( (d.neural_data,     0) )\n",
-    "streams.append( (d.behavioral_data, 1) )\n",
-    "streams.append( (d.behavioral_data, 3) )\n",
+    "streams.append( (d.beh_vel, 1) )\n",
+    "streams.append( (d.beh_vel, 3) )\n",
     "\n",
     "p1 = Pipeline([\n",
     "    CenteringTransformer(init_size=50, input_streams={0:'X'}, output_streams={0:0}),\n",
@@ -192,9 +194,8 @@
    "execution_count": null,
    "id": "4",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-28T19:21:31.525676Z",
-     "start_time": "2024-09-28T19:21:31.078176Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -227,7 +228,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -256,7 +261,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "e1, e2 = np.zeros(6), np.zeros(6)\n",
@@ -272,7 +281,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "jpca.get_U()"
@@ -282,7 +295,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "plt.matshow(bw.A)"
@@ -292,7 +309,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -312,7 +333,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "assert isinstance(d, datasets.Zong22Dataset)\n",
@@ -343,7 +368,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
