fixes loading position twice in Odoherty21

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -54,10 +54,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:29.714228Z",
      "start_time": "2024-09-28T21:00:55.645387Z"
-    },
-    "jupyter": {
-     "is_executing": true
     }
    },
    "outputs": [],
@@ -194,8 +192,9 @@
    "execution_count": null,
    "id": "4",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.072385Z",
+     "start_time": "2024-09-28T21:05:29.715080Z"
     }
    },
    "outputs": [],
@@ -229,8 +228,9 @@
    "execution_count": null,
    "id": "5",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.155693Z",
+     "start_time": "2024-09-28T21:05:30.073701Z"
     }
    },
    "outputs": [],
@@ -262,8 +262,9 @@
    "execution_count": null,
    "id": "6",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.198499Z",
+     "start_time": "2024-09-28T21:05:30.156320Z"
     }
    },
    "outputs": [],
@@ -282,8 +283,9 @@
    "execution_count": null,
    "id": "7",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.203839Z",
+     "start_time": "2024-09-28T21:05:30.199174Z"
     }
    },
    "outputs": [],
@@ -296,8 +298,9 @@
    "execution_count": null,
    "id": "8",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.444297Z",
+     "start_time": "2024-09-28T21:05:30.204657Z"
     }
    },
    "outputs": [],
@@ -310,8 +313,9 @@
    "execution_count": null,
    "id": "9",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.662122Z",
+     "start_time": "2024-09-28T21:05:30.446891Z"
     }
    },
    "outputs": [],
@@ -334,8 +338,9 @@
    "execution_count": null,
    "id": "10",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-09-28T21:05:30.910601Z",
+     "start_time": "2024-09-28T21:05:30.663256Z"
     }
    },
    "outputs": [],
@@ -368,11 +373,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
