--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:00:55.075656Z",
-     "start_time": "2024-09-28T21:00:55.072313Z"
+     "end_time": "2024-09-28T21:45:10.495097Z",
+     "start_time": "2024-09-28T21:45:08.845881Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:00:55.641040Z",
-     "start_time": "2024-09-28T21:00:55.289282Z"
+     "end_time": "2024-09-28T21:45:10.824135Z",
+     "start_time": "2024-09-28T21:45:10.496056Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:29.714228Z",
-     "start_time": "2024-09-28T21:00:55.645387Z"
+     "end_time": "2024-09-28T21:46:48.182428Z",
+     "start_time": "2024-09-28T21:45:10.826792Z"
     }
    },
    "outputs": [],
@@ -66,9 +66,9 @@
     "# d = TestDataset()\n",
     "\n",
     "streams = []\n",
-    "streams.append( (d.neural_data,     0) )\n",
-    "streams.append( (d.beh_vel, 1) )\n",
-    "streams.append( (d.beh_vel, 3) )\n",
+    "streams.append((d.neural_data, 0))\n",
+    "streams.append((d.beh_vel, 1))\n",
+    "streams.append((d.beh_vel, 3))\n",
     "\n",
     "p1 = Pipeline([\n",
     "    CenteringTransformer(init_size=50, input_streams={0:'X'}, output_streams={0:0}),\n",
@@ -170,7 +170,7 @@
     "                    ax.set_zorder(1)\n",
     "                    pred_am.grab_frame()\n",
     "                \n",
-    "                vid.plot_for_video_t(output.t, latents, latent_ts, latent_predictions, beh_predictions, prediction_ts)\n",
+    "                vid.plot_for_video_t(output.t, latents, latent_ts, latent_predictions, beh_predictions, prediction_ts, streams)\n",
     "            \n",
     "            if output.t == video_ts[-1]:\n",
     "                break\n",
@@ -193,8 +193,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.072385Z",
-     "start_time": "2024-09-28T21:05:29.715080Z"
+     "end_time": "2024-09-28T21:46:48.564857Z",
+     "start_time": "2024-09-28T21:46:48.183329Z"
     }
    },
    "outputs": [],
@@ -229,8 +229,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.155693Z",
-     "start_time": "2024-09-28T21:05:30.073701Z"
+     "end_time": "2024-09-28T21:46:48.625600Z",
+     "start_time": "2024-09-28T21:46:48.566164Z"
     }
    },
    "outputs": [],
@@ -263,8 +263,8 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.198499Z",
-     "start_time": "2024-09-28T21:05:30.156320Z"
+     "end_time": "2024-09-28T21:46:48.676014Z",
+     "start_time": "2024-09-28T21:46:48.626505Z"
     }
    },
    "outputs": [],
@@ -284,8 +284,8 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.203839Z",
-     "start_time": "2024-09-28T21:05:30.199174Z"
+     "end_time": "2024-09-28T21:46:48.681220Z",
+     "start_time": "2024-09-28T21:46:48.676837Z"
     }
    },
    "outputs": [],
@@ -299,8 +299,8 @@
    "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.444297Z",
-     "start_time": "2024-09-28T21:05:30.204657Z"
+     "end_time": "2024-09-28T21:46:48.830741Z",
+     "start_time": "2024-09-28T21:46:48.682027Z"
     }
    },
    "outputs": [],
@@ -314,8 +314,8 @@
    "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.662122Z",
-     "start_time": "2024-09-28T21:05:30.446891Z"
+     "end_time": "2024-09-28T21:46:49.072036Z",
+     "start_time": "2024-09-28T21:46:48.832947Z"
     }
    },
    "outputs": [],
@@ -339,8 +339,8 @@
    "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:05:30.910601Z",
-     "start_time": "2024-09-28T21:05:30.663256Z"
+     "end_time": "2024-09-28T21:46:49.239214Z",
+     "start_time": "2024-09-28T21:46:49.074231Z"
     }
    },
    "outputs": [],
