--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:45:10.495097Z",
-     "start_time": "2024-09-28T21:45:08.845881Z"
+     "end_time": "2024-09-29T18:47:37.618482Z",
+     "start_time": "2024-09-29T18:47:37.609315Z"
     }
    },
    "outputs": [],
@@ -15,13 +15,18 @@
     "import numpy as np\n",
     "\n",
     "import adaptive_latents\n",
-    "from adaptive_latents import AnimationManager, Pipeline, CenteringTransformer, proSVD, Bubblewrap, VanillaOnlineRegressor, NumpyTimedDataSource, KernelSmoother, Concatenator, sjPCA\n",
+    "from adaptive_latents import AnimationManager, Pipeline, CenteringTransformer, proSVD, Bubblewrap, VanillaOnlineRegressor, NumpyTimedDataSource, KernelSmoother, Concatenator, sjPCA, ZScoringTransformer\n",
     "import adaptive_latents.input_sources.datasets as datasets\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
     "from IPython.display import Video, Image, display\n",
-    "from importlib import reload\n"
+    "\n",
+    "from importlib import reload\n",
+    "import socket\n",
+    "hostname = socket.gethostname()\n",
+    "rng = np.random.default_rng()\n",
+    "\n"
    ]
   },
   {
@@ -30,8 +35,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:45:10.824135Z",
-     "start_time": "2024-09-28T21:45:10.496056Z"
+     "end_time": "2024-09-29T18:47:37.982547Z",
+     "start_time": "2024-09-29T18:47:37.759431Z"
     }
    },
    "outputs": [],
@@ -54,31 +59,35 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:48.182428Z",
-     "start_time": "2024-09-28T21:45:10.826792Z"
+     "end_time": "2024-09-29T18:48:10.199421Z",
+     "start_time": "2024-09-29T18:47:37.986836Z"
     }
    },
    "outputs": [],
    "source": [
     "%%time\n",
     "%matplotlib inline\n",
-    "d = datasets.Odoherty21Dataset(neural_lag=0)\n",
-    "# d = TestDataset()\n",
+    "shortrun = hostname == 'tycho' and True\n",
+    "\n",
+    "\n",
+    "d = datasets.Odoherty21Dataset(neural_lag=0, drop_third_coord=False)\n",
     "\n",
     "streams = []\n",
     "streams.append((d.neural_data, 0))\n",
-    "streams.append((d.beh_vel, 1))\n",
-    "streams.append((d.beh_vel, 3))\n",
+    "streams.append((d.beh_pos, 1))\n",
+    "streams.append((d.beh_pos, 3))\n",
     "\n",
+    "# this pipeline makes the latent space\n",
     "p1 = Pipeline([\n",
-    "    CenteringTransformer(init_size=50, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    # CenteringTransformer(init_size=0, input_streams={1:'X'}, output_streams={1:1}),\n",
+    "    CenteringTransformer(init_size=100, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    KernelSmoother(tau=0.04/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    zst:=ZScoringTransformer(init_size=10/d.beh_pos.dt, freeze_after_init=False, input_streams={1:'X'}, output_streams={1:1}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
     "    pro:=proSVD(k=6, init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
     "    jpca:=sjPCA(init_size=100, input_streams={2:'X'}, output_streams={2:2}),\n",
     "])\n",
     "\n",
+    "# this pipeline handles the prediction and regression\n",
     "p2 = Pipeline([\n",
     "    bw:=Bubblewrap(\n",
     "        num=1100,\n",
@@ -102,7 +111,7 @@
     "\n",
     "\n",
     "video_dt = 0.05\n",
-    "video_ts = np.arange(100)*video_dt + 150\n",
+    "video_ts = (np.arange(50)*video_dt + 35) if shortrun else (np.arange(200)*video_dt + 600)\n",
     "streams.append( (NumpyTimedDataSource(np.nan * video_ts, video_ts), 'video') )\n",
     "\n",
     "\n",
@@ -193,20 +202,20 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:48.564857Z",
-     "start_time": "2024-09-28T21:46:48.183329Z"
+     "end_time": "2024-09-29T18:48:10.515490Z",
+     "start_time": "2024-09-29T18:48:10.200310Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
     "behavior_dict = dict(\n",
-    "    true_behavior=np.squeeze(d.behavioral_data.a),\n",
-    "    true_behavior_t=d.behavioral_data.t,\n",
+    "    true_behavior=np.squeeze(streams[2][0].a),\n",
+    "    true_behavior_t=streams[2][0].t,\n",
     "    predicted_behavior=beh_predictions,\n",
     "    predicted_behavior_t=prediction_ts,\n",
     ")\n",
-    "adaptive_latents.bubblewrap.Bubblewrap.compare_runs([bw], [behavior_dict], t_in_samples=True)\n",
+    "adaptive_latents.bubblewrap.Bubblewrap.compare_runs([bw], [behavior_dict], t_in_samples=False)\n",
     "plt.show()\n",
     "\n",
     "if pred_am is not None:\n",
@@ -229,8 +238,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:48.625600Z",
-     "start_time": "2024-09-28T21:46:48.566164Z"
+     "end_time": "2024-09-29T18:48:10.570372Z",
+     "start_time": "2024-09-29T18:48:10.516578Z"
     }
    },
    "outputs": [],
@@ -263,8 +272,8 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:48.676014Z",
-     "start_time": "2024-09-28T21:46:48.626505Z"
+     "end_time": "2024-09-29T18:48:10.647667Z",
+     "start_time": "2024-09-29T18:48:10.571017Z"
     }
    },
    "outputs": [],
@@ -284,8 +293,8 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:48.681220Z",
-     "start_time": "2024-09-28T21:46:48.676837Z"
+     "end_time": "2024-09-29T18:48:10.652732Z",
+     "start_time": "2024-09-29T18:48:10.648475Z"
     }
    },
    "outputs": [],
@@ -299,8 +308,8 @@
    "id": "8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:48.830741Z",
-     "start_time": "2024-09-28T21:46:48.682027Z"
+     "end_time": "2024-09-29T18:48:10.855520Z",
+     "start_time": "2024-09-29T18:48:10.653197Z"
     }
    },
    "outputs": [],
@@ -314,8 +323,8 @@
    "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:49.072036Z",
-     "start_time": "2024-09-28T21:46:48.832947Z"
+     "end_time": "2024-09-29T18:48:10.925874Z",
+     "start_time": "2024-09-29T18:48:10.856039Z"
     }
    },
    "outputs": [],
@@ -339,8 +348,8 @@
    "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T21:46:49.239214Z",
-     "start_time": "2024-09-28T21:46:49.074231Z"
+     "end_time": "2024-09-29T18:48:10.979399Z",
+     "start_time": "2024-09-29T18:48:10.928101Z"
     }
    },
    "outputs": [],
