adds a nan check to bubblewrap's logging

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T01:07:39.265052Z",
-     "start_time": "2024-09-30T01:07:37.586757Z"
+     "end_time": "2024-09-30T01:55:34.888685Z",
+     "start_time": "2024-09-30T01:55:32.836676Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T01:07:39.512897Z",
-     "start_time": "2024-09-30T01:07:39.265728Z"
+     "end_time": "2024-09-30T01:55:35.065659Z",
+     "start_time": "2024-09-30T01:55:34.889780Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T01:08:18.396976Z",
-     "start_time": "2024-09-30T01:07:39.515904Z"
+     "end_time": "2024-09-30T01:57:52.995328Z",
+     "start_time": "2024-09-30T01:55:35.069345Z"
     }
    },
    "outputs": [],
@@ -153,7 +153,7 @@
     ")\n",
     "\n",
     "\n",
-    "exit_time = 40\n",
+    "exit_time = 40 if shortrun else 600\n",
     "\n",
     "pbar = tqdm(total=exit_time)\n",
     "pro_latents = []\n",
@@ -251,12 +251,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T01:08:19.066477Z",
-     "start_time": "2024-09-30T01:08:18.411987Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -295,12 +290,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T01:08:19.645372Z",
-     "start_time": "2024-09-30T01:08:19.070425Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -346,12 +336,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T01:08:19.823911Z",
-     "start_time": "2024-09-30T01:08:19.646010Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -372,12 +357,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T01:08:20.108506Z",
-     "start_time": "2024-09-30T01:08:19.824779Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert isinstance(d, datasets.Zong22Dataset)\n",
@@ -408,12 +388,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T01:08:20.109393Z",
-     "start_time": "2024-09-30T01:08:20.109320Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
