fixes the joint_target to use pre-bw ouputs

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T01:55:34.888685Z",
-     "start_time": "2024-09-30T01:55:32.836676Z"
+     "end_time": "2024-09-30T14:44:22.862786Z",
+     "start_time": "2024-09-30T14:44:22.853709Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T01:55:35.065659Z",
-     "start_time": "2024-09-30T01:55:34.889780Z"
+     "end_time": "2024-09-30T14:44:23.296113Z",
+     "start_time": "2024-09-30T14:44:22.929722Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T01:57:52.995328Z",
-     "start_time": "2024-09-30T01:55:35.069345Z"
+     "end_time": "2024-09-30T14:44:49.811053Z",
+     "start_time": "2024-09-30T14:44:23.300678Z"
     }
    },
    "outputs": [],
@@ -84,7 +84,7 @@
     "shortrun = hostname == 'tycho' and True\n",
     "\n",
     "\n",
-    "d = datasets.Odoherty21Dataset(neural_lag=0, drop_third_coord=True)\n",
+    "d = datasets.Odoherty21Dataset(neural_lag=0, pos_rescale_factor=1, vel_rescale_factor=1)\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -203,8 +203,8 @@
     "    if neural_stream_stream == 4 and not np.isnan(neural_stream_output).any():\n",
     "        neural_target.append(neural_stream_output)\n",
     "        \n",
-    "    if pre_bw_stream == 2:\n",
-    "        joint_target.append(output)\n",
+    "    if pre_bw_stream == 2 and np.isfinite(pre_bw_output).all():\n",
+    "        joint_target.append(pre_bw_output)\n",
     "    \n",
     "    if stream == 2 and np.isfinite(output).all(): # do predictions\n",
     "        prediction_t = output.t + bw.dt\n",
@@ -251,7 +251,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T14:44:50.417654Z",
+     "start_time": "2024-09-30T14:44:49.813800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -290,7 +295,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T14:44:50.842288Z",
+     "start_time": "2024-09-30T14:44:50.418586Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -336,7 +346,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T14:44:50.901558Z",
+     "start_time": "2024-09-30T14:44:50.842868Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -357,7 +372,31 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T14:44:51.882604Z",
+     "start_time": "2024-09-30T14:44:50.902203Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "d = datasets.Odoherty21Dataset(neural_lag=0, pos_rescale_factor=1/30, vel_rescale_factor=1/75)\n",
+    "fig, ax = plt.subplots()\n",
+    "d.plot_variances(ax)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T14:44:51.896907Z",
+     "start_time": "2024-09-30T14:44:51.883989Z"
+    }
+   },
    "outputs": [],
    "source": [
     "assert isinstance(d, datasets.Zong22Dataset)\n",
@@ -378,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -387,8 +426,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
-   "metadata": {},
+   "id": "10",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-30T14:44:51.897419Z",
+     "start_time": "2024-09-30T14:44:51.897373Z"
+    }
+   },
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
