adds ability to switch between pre-bw latents

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:22.862786Z",
-     "start_time": "2024-09-30T14:44:22.853709Z"
+     "end_time": "2024-09-30T15:04:44.370013Z",
+     "start_time": "2024-09-30T15:04:44.360360Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:23.296113Z",
-     "start_time": "2024-09-30T14:44:22.929722Z"
+     "end_time": "2024-09-30T15:04:44.903832Z",
+     "start_time": "2024-09-30T15:04:44.440615Z"
     }
    },
    "outputs": [],
@@ -73,8 +73,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:49.811053Z",
-     "start_time": "2024-09-30T14:44:23.300678Z"
+     "end_time": "2024-09-30T15:05:19.558348Z",
+     "start_time": "2024-09-30T15:04:44.907901Z"
     }
    },
    "outputs": [],
@@ -84,7 +84,7 @@
     "shortrun = hostname == 'tycho' and True\n",
     "\n",
     "\n",
-    "d = datasets.Odoherty21Dataset(neural_lag=0, pos_rescale_factor=1, vel_rescale_factor=1)\n",
+    "d = datasets.Odoherty21Dataset(neural_lag=0, pos_rescale_factor=1/30, vel_rescale_factor=1/75)\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -108,13 +108,17 @@
     "p1 = Pipeline([\n",
     "    CenteringTransformer(init_size=100, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    KernelSmoother(tau=0.04/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
-    "    zst:=ZScoringTransformer(init_size=10/d.beh_pos.dt, freeze_after_init=False, input_streams={1:'X'}, output_streams={1:1}),\n",
+    "    # zst:=ZScoringTransformer(init_size=10/d.beh_pos.dt, freeze_after_init=False, input_streams={1:'X'}, output_streams={1:1}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2, 'skip':-1}),\n",
     "])\n",
     "\n",
     "pro=proSVD(k=6, init_size=100, input_streams={2:'X'}, output_streams={2:2})\n",
     "jpca=sjPCA(init_size=100, input_streams={2:'X'}, output_streams={2:2})\n",
     "ica=mmICA(init_size=100, input_streams={2:'X'}, output_streams={2:2})\n",
+    "\n",
+    "\n",
+    "latents_for_bw = ['prosvd', 'jpca', 'mmica'][1]\n",
+    "pre_bw_latent_dims_to_drop = 0\n",
     "\n",
     "\n",
     "# this pipeline handles the prediction and regression\n",
@@ -139,7 +143,7 @@
     "neural_only_reg_pipeline = Pipeline([\n",
     "    CenteringTransformer(**(p1.steps[0].get_params() | dict(input_streams={4:'X'}, output_streams={4:4}))),\n",
     "    KernelSmoother(**(p1.steps[1].get_params() | dict(input_streams={4:'X'}, output_streams={4:4}))),\n",
-    "    proSVD(k=6, init_size=100, input_streams={4:'X'}, output_streams={4:4}),\n",
+    "    proSVD(k=4, init_size=100, input_streams={4:'X'}, output_streams={4:4}),\n",
     "    alpha_to_neural_reg:=VanillaOnlineRegressor(\n",
     "        input_streams={2:'X', 4:'Y'},\n",
     "    )\n",
@@ -187,7 +191,15 @@
     "        ica_latents.append(ica_output)\n",
     "\n",
     "    # bw step\n",
-    "    pre_bw_output, pre_bw_stream = jpca_output, jpca_stream\n",
+    "    pre_bw_output, pre_bw_stream = {\n",
+    "        'prosvd': (pro_output, pro_stream),\n",
+    "        'jpca': (jpca_output, jpca_stream),\n",
+    "        'mmica': (ica_output, ica_stream),\n",
+    "    }[latents_for_bw] \n",
+    "    \n",
+    "    if pre_bw_stream == 2 and pre_bw_latent_dims_to_drop > 0:\n",
+    "        pre_bw_output = pre_bw_output[:,:-pre_bw_latent_dims_to_drop]\n",
+    "    \n",
     "    output, stream = bw.partial_fit_transform(pre_bw_output, pre_bw_stream, return_output_stream=True)\n",
     "\n",
     "    # fit all the regressions on alpha\n",
@@ -253,8 +265,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:50.417654Z",
-     "start_time": "2024-09-30T14:44:49.813800Z"
+     "end_time": "2024-09-30T15:05:20.156780Z",
+     "start_time": "2024-09-30T15:05:19.561750Z"
     }
    },
    "outputs": [],
@@ -297,8 +309,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:50.842288Z",
-     "start_time": "2024-09-30T14:44:50.418586Z"
+     "end_time": "2024-09-30T15:05:20.940482Z",
+     "start_time": "2024-09-30T15:05:20.157676Z"
     }
    },
    "outputs": [],
@@ -348,8 +360,8 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:50.901558Z",
-     "start_time": "2024-09-30T14:44:50.842868Z"
+     "end_time": "2024-09-30T15:05:21.002541Z",
+     "start_time": "2024-09-30T15:05:20.941047Z"
     }
    },
    "outputs": [],
@@ -374,27 +386,8 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:51.882604Z",
-     "start_time": "2024-09-30T14:44:50.902203Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "d = datasets.Odoherty21Dataset(neural_lag=0, pos_rescale_factor=1/30, vel_rescale_factor=1/75)\n",
-    "fig, ax = plt.subplots()\n",
-    "d.plot_variances(ax)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:51.896907Z",
-     "start_time": "2024-09-30T14:44:51.883989Z"
+     "end_time": "2024-09-30T15:05:21.980503Z",
+     "start_time": "2024-09-30T15:05:21.969868Z"
     }
    },
    "outputs": [],
@@ -417,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -426,13 +419,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-30T14:44:51.897419Z",
-     "start_time": "2024-09-30T14:44:51.897373Z"
-    }
-   },
+   "id": "9",
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = datasets.Odoherty21Dataset()\n",
